tests/parser/error/program_order.c
void main() {

}
struct sdf {
    int sfd;
};
#include "this"

int cd[342];